--- a/main.css
+++ b/main.css
@@ -6,6 +6,10 @@ body {
   flex-direction: column;
 }
 
+body {
+  padding: 15px;
+}
+
 div.legend {
   height: 30%;
   flex: 1;
@@ -14,16 +18,15 @@ div.legend {
 div.content {
   flex: 1;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
 }
 
-#original-div {
-  width: 300px;
+.original-div {
+  width: 200px;
   padding: 15px;
   border: 4px solid gold;
   box-sizing: border-box;
-  z-index: 1;
 }
 
 div.repl-div {
@@ -34,18 +37,18 @@ div.repl-div {
 
 div#repl-div-1 {
   border: 4px solid teal;
-  animation: foo 2.5s;
+  /*animation: foo 2.5s; */
 }
 
 div#repl-div-2 {
   border: 4px solid rebeccapurple;
-  animation: foo 2.5s;
+  /*animation: foo 2.5s;*/
   animation-delay: 3s;
 }
 
 div#repl-div-3 {
   border: 4px solid red;
-  animation: foo 2.5s;
+  /*animation: foo 2.5s;*/
   animation-delay: 6s;
 }
 
